clearing unnecesary testing code

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/iampopov/employeeManagementSystem#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
     "dotenv": "^8.2.0",
     "inquirer": "^7.0.4",
     "mysql": "^2.18.1"
